Removing a Character object from the scene causes a crash. #32270

Closed
opened 2012-08-06 00:26:00 +02:00 by Mitchell Stokes · 3 comments

Category: Physics

%%%The summary pretty much says it all: if you remove an object that has the character physics type from the scene, the BGE will crash.

Here's the callstack:

blender.exe!btDiscreteDynamicsWorld::updateActions(float timeStep=0.016666668) Line 614 + 0x37 bytes C++

blender.exe!btDiscreteDynamicsWorld::internalSingleStepSimulation(float timeStep=0.016666668)  Line 515	C++
blender.exe!btSoftRigidDynamicsWorld::internalSingleStepSimulation(float timeStep=0.016666668)  Line 97	C++
blender.exe!btDiscreteDynamicsWorld::stepSimulation(float timeStep=0.016666668, int maxSubSteps=25, float fixedTimeStep=0.016666668)  Line 457	C++
blender.exe!CcdPhysicsEnvironment::proceedDeltaTime(double curTime=4.4210847997276890, float timeStep=0.016666668, float interval=0.016666668)  Line 603 + 0x39 bytes	C++
blender.exe!KX_KetsjiEngine::NextFrame()  Line 689	C++
blender.exe!StartKetsjiShell(bContext * C=0x00000000037c2d48, ARegion * ar=0x000000000e9c8208, rcti * cam_frame=0x00000000002bf910, int always_use_expand_framing=1)  Line 451 + 0xd bytes	C++

I'm also attaching char_end_crash to demonstrate the problem.%%%

**Category**: Physics %%%The summary pretty much says it all: if you remove an object that has the character physics type from the scene, the BGE will crash. Here's the callstack: > blender.exe!btDiscreteDynamicsWorld::updateActions(float timeStep=0.016666668) Line 614 + 0x37 bytes C++ blender.exe!btDiscreteDynamicsWorld::internalSingleStepSimulation(float timeStep=0.016666668) Line 515 C++ blender.exe!btSoftRigidDynamicsWorld::internalSingleStepSimulation(float timeStep=0.016666668) Line 97 C++ blender.exe!btDiscreteDynamicsWorld::stepSimulation(float timeStep=0.016666668, int maxSubSteps=25, float fixedTimeStep=0.016666668) Line 457 C++ blender.exe!CcdPhysicsEnvironment::proceedDeltaTime(double curTime=4.4210847997276890, float timeStep=0.016666668, float interval=0.016666668) Line 603 + 0x39 bytes C++ blender.exe!KX_KetsjiEngine::NextFrame() Line 689 C++ blender.exe!StartKetsjiShell(bContext * C=0x00000000037c2d48, ARegion * ar=0x000000000e9c8208, rcti * cam_frame=0x00000000002bf910, int always_use_expand_framing=1) Line 451 + 0xd bytes C++ I'm also attaching char_end_crash to demonstrate the problem.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%Fixed in r49590.%%%

%%%Fixed in r49590.%%%
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#32270
No description provided.